--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
@@ -7,17 +7,19 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '20'
-      - name: Install Dependencies
+
+      - name: Install dependencies
         run: npm install
-      - name: Run Tests
-        run: npm test
-      - name: Build Docker Image
+
+      - name: Docker Build
         run: docker build -t devops-demo .
